--- a/index.html
+++ b/index.html
@@ -2,15 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Resume</title>
+    <title>Resume</title>
 </head>
 <body>
     <h1>Michael Olajide</h1>
-    <img src="./assets/images/Michael.png" height="100" alt="profile photo" />
+    <img src="./assets/images/Michael.png" height="100" alt="michael's profile photo" />
     <h2>Summary</h2>
     <p>I am exceptionally a creative graphic designer & a web Developer with a demonstrated history in customer service skills. I am knowledgeable about a wide range of computer languages and the principles and techniques of graphic, website construction and maintenance.</p>
-    <hr />
     <hr />
 
     <h2>Education</h2>
@@ -48,7 +46,6 @@
         <li>Creativity :⭐️⭐️⭐️⭐️⭐️</li>
         <li>Problem solving :⭐️⭐️⭐️</li>
         <li>Adobe Suite : ⭐️⭐️⭐️⭐️</li>
-        <li>Organization Skills : ⭐️⭐️</li>
     </ul>
     <hr />
 
@@ -57,7 +54,6 @@
         <li>Certificate of Completion - NYSC (May 2023)</li>
         <li>Brand Strategy for Designers - Linkedin LEARNING (Feb. 2023)</li>
     </ul>
-    <hr />
     <hr />
 
     <h2>Others</h2>
